Colours to blue

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <style>
         body{
-            background: linear-gradient(to bottom, #1c9c94, #90d5ff, #f5f5f5);
+            background: #f0ead6;
             margin: 0;
             height: 100vh;
             background-repeat: no-repeat;
@@ -165,7 +165,7 @@
 
         /* Dark mode colors */
         body.dark-mode {
-            background: linear-gradient(to bottom, #000000, #36454f, #808080);
+            background: #080808;
             color: #ddd;
             height: 100vh;
             background-attachment: fixed;
@@ -179,7 +179,7 @@
         }
 
         body.dark-mode .module-container {
-            background-color: rgba(0, 0, 0, 0.1);
+            background-color: #4b4b4b;
             box-shadow: 5px 5px 15px #1c9c94, -5px 5px 15px #1c9c94;
         }
 
@@ -190,7 +190,7 @@
         }
 
         body.dark-mode .module-button:hover {
-            background-color: #666;
+            background-color: #838282;
         }
 
         body.dark-mode .caixa{
@@ -199,27 +199,28 @@
         }
 
         body.dark-mode .transacoes{
-            border-top: 10px solid #a1ff90;
-            box-shadow: 2px 2px 7px #a1ff90, -2px 2px 7px #a1ff90;
+            border-top: 10px solid #90d5ff;
+            box-shadow: 2px 2px 7px #90d5ff, -2px 2px 7px #90d5ff;
+
         }
 
         body.dark-mode .riscos {
-            border-top: 10px solid #f8ce77;
-            box-shadow: 2px 2px 7px #f8ce77, -2px 2px 7px #f8ce77;
+            border-top: 10px solid #90d5ff;
+            box-shadow: 2px 2px 7px #90d5ff, -2px 2px 7px #90d5ff;
         }
 
         body.dark-mode .dados {
-            border-top: 10px solid #9f6bfa;
-            box-shadow: 2px 2px 7px #9f6bfa, -2px 2px 7px #9f6bfa;
+            border-top: 10px solid #90d5ff;
+            box-shadow: 2px 2px 7px #90d5ff, -2px 2px 7px #90d5ff;
         }
 
         body.dark-mode .hedge {
-            border-top: 10px solid #fa6b6b;
-            box-shadow: 2px 2px 7px #fa6b6b, -2px 2px 7px #fa6b6b;
+            border-top: 10px solid #90d5ff;
+            box-shadow: 2px 2px 7px #90d5ff, -2px 2px 7px #90d5ff;
         }
         body.dark-mode .conformidade {
-            border-top: 10px solid #fa6be7;
-            box-shadow: 2px 2px 7px #fa6be7, -2px 2px 7px #fa6be7;
+            border-top: 10px solid #90d5ff;
+            box-shadow: 2px 2px 7px #90d5ff, -2px 2px 7px #90d5ff;
         }
 
         body.dark-mode .explore {
