Light mode colours

--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
         .head{
             text-align: center;
             font: bolder 64px "Times New Roman";
-            background-color: #1c9c9466;
+            background-color: #f0ead6;
             opacity: 0.85;
-            color: white;
+            color: #3a3734;
             padding: 10px;
             margin: 20px auto;
             width: 600px;
             border-radius: 10px;
-            box-shadow: 5px 5px 10px #1c9c94, -5px 5px 15px #1c9c94;
+            box-shadow: 5px 5px 10px #4492b6, -5px 5px 15px #4492b6;
             text-shadow: 2px 2px 2px #a4a4a4;
         }
         .module-container{
@@ -103,7 +103,7 @@
             display: flex;
             justify-content: center;
             background-color: rgba(255, 255, 255, 0.8);
-            box-shadow: 5px 5px 10px #1c9c94, -5px 5px 15px #1c9c94;
+            box-shadow: 5px 5px 10px #4492b6, -5px 5px 15px #4492b6;
             padding: 30px;
             gap: 30px;
             border-radius: 40px;
@@ -127,24 +127,24 @@
             box-shadow: 2px 2px 5px #90d5ff, -2px 2px 5px #90d5ff;
         }
         .transacoes{
-            border-top: 10px solid #a1ff90;
-            box-shadow: 2px 2px 5px #a1ff90, -2px 2px 5px #a1ff90;
+            border-top: 10px solid #90d5ff;
+            box-shadow: 2px 2px 5px #90d5ff, -2px 2px 5px #90d5ff;
         }
         .riscos {
-            border-top: 10px solid #f8ce77;
-            box-shadow: 2px 2px 5px #f8ce77, -2px 2px 5px #f8ce77;
+            border-top: 10px solid #90d5ff;
+            box-shadow: 2px 2px 5px #90d5ff, -2px 2px 5px #90d5ff;
         }
         .dados {
-            border-top: 10px solid #9f6bfa;
-            box-shadow: 2px 2px 5px #9f6bfa, -2px 2px 5px #9f6bfa;
+            border-top: 10px solid #90d5ff;
+            box-shadow: 2px 2px 5px #90d5ff, -2px 2px 5px #90d5ff;
         }
         .hedge {
-            border-top: 10px solid #fa6b6b;
-            box-shadow: 2px 2px 5px #fa6b6b, -2px 2px 5px #fa6b6b;
+            border-top: 10px solid #90d5ff;
+            box-shadow: 2px 2px 5px #90d5ff, -2px 2px 5px #90d5ff;
         }
         .conformidade {
-            border-top: 10px solid #fa6be7;
-            box-shadow: 2px 2px 5px #fa6be7, -2px 2px 5px #fa6be7;
+            border-top: 10px solid #90d5ff;
+            box-shadow: 2px 2px 5px #90d5ff, -2px 2px 5px #90d5ff;
         }
         .explore{
             display: inline-block;
@@ -153,9 +153,9 @@
             height: 30px;
             margin: auto;
             border-radius: 40px;
-            border: 1px solid #1c9c9466;
+            border: 1px solid rgb(28, 156, 148);
             vertical-align: center;
-            background: #90d5ff;
+            background: #57a8e6;
         }
         .explore:hover{
             background: #1c9c94;
