--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             margin: 20px auto;
             width: 600px;
             border-radius: 10px;
-            box-shadow: 5px 5px 10px #4492b6, -5px 5px 15px #4492b6;
+            box-shadow: 5px 5px 7px #01796F, -5px 5px 12px #01796F;
             text-shadow: 2px 2px 2px #a4a4a4;
         }
         .module-container{
@@ -103,7 +103,7 @@
             display: flex;
             justify-content: center;
             background-color: rgba(255, 255, 255, 0.8);
-            box-shadow: 5px 5px 10px #4492b6, -5px 5px 15px #4492b6;
+            box-shadow: 5px 5px 7px #01796F, -5px 5px 12px #01796F;
             padding: 30px;
             gap: 30px;
             border-radius: 40px;
