dark mode color

--- a/index.html
+++ b/index.html
@@ -174,19 +174,19 @@
         body.dark-mode .head {
             background-color: #08080866;
             color: #eee;
-            box-shadow: 5px 5px 15px #1c9c94, -5px 5px 15px #1c9c94;
+            box-shadow: 5px 5px 10px #01796F, -5px 5px 10px #01796F;
             text-shadow: 2px 2px 5px #605f5f;
         }
 
         body.dark-mode .module-container {
             background-color: #4b4b4b;
-            box-shadow: 5px 5px 15px #1c9c94, -5px 5px 15px #1c9c94;
+            box-shadow: 5px 5px 10px #01796F, -5px 5px 10px #01796F;
         }
 
         body.dark-mode .module-button {
             background-color: #08080866;
             color: #f3f3df;
-            box-shadow: 2px 2px 7px #1c9c94;
+            box-shadow: 2px 2px 7px #01796F;
         }
 
         body.dark-mode .module-button:hover {
