dark text colors

--- a/index.html
+++ b/index.html
@@ -166,14 +166,14 @@
         /* Dark mode colors */
         body.dark-mode {
             background: #080808;
-            color: #ddd;
+            color: #f5f5dc;
             height: 100vh;
             background-attachment: fixed;
         }
 
         body.dark-mode .head {
             background-color: #08080866;
-            color: #eee;
+            color: #f5f5dc;
             box-shadow: 5px 5px 10px #01796F, -5px 5px 10px #01796F;
             text-shadow: 2px 2px 5px #605f5f;
         }
@@ -185,7 +185,7 @@
 
         body.dark-mode .module-button {
             background-color: #08080866;
-            color: #f3f3df;
+            color: #f5f5dc;
             box-shadow: 2px 2px 7px #01796F;
         }
 
