light mode colours

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <style>
         body{
-            background: #f0ead6;
+            background: linear-gradient(to bottom, #1c9c94, #90d5ff, #f0ead6);
             margin: 0;
             height: 100vh;
             background-repeat: no-repeat;
