--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
         /* Dark mode colors */
         body.dark-mode {
-            background: #080808;
+            background: linear-gradient(to bottom, #080808, #393939, #838383);
             color: #f5f5dc;
             height: 100vh;
             background-attachment: fixed;
