--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <style>
         body{
-            background: linear-gradient(to bottom, #002244, #90d5ff, #f0ead6);
+            background: radial-gradient(circle, #f0ead6 85%, #484640 15%);
             margin: 0;
             height: 100vh;
             background-repeat: no-repeat;
@@ -92,7 +92,7 @@
             margin: 20px auto;
             width: 600px;
             border-radius: 10px;
-            box-shadow: 5px 5px 7px #01796F, -5px 5px 12px #01796F;
+            box-shadow: 5px 5px 7px #6f4e37, -5px 5px 12px #6f4e37;
             text-shadow: 2px 2px 2px #a4a4a4;
         }
         .module-container{
@@ -103,7 +103,7 @@
             display: flex;
             justify-content: center;
             background-color: rgba(255, 255, 255, 0.8);
-            box-shadow: 5px 5px 7px #01796F, -5px 5px 12px #01796F;
+            box-shadow: 5px 5px 7px #6f4e37, -5px 5px 12px #6f4e37;
             padding: 30px;
             gap: 30px;
             border-radius: 40px;
@@ -115,7 +115,7 @@
             padding: 10px;
             text-align: center;
             border-radius: 40px;
-            box-shadow: 2px 2px 5px #1c9c94;
+            box-shadow: 2px 2px 5px #6f4e37;
         }
         .module-button:hover{
             transform: translateY(-10px);
@@ -123,28 +123,28 @@
             background: inherit;
         }
         .caixa, body.dark-mode .caixa{
-            border-top: 10px solid #90d5ff;
-            box-shadow: 2px 2px 5px #90d5ff, -2px 2px 5px #90d5ff;
+            border-top: 10px solid #6f4e37;
+            box-shadow: 2px 2px 5px #6f4e37, -2px 2px 5px #6f4e37;
         }
         .transacoes{
-            border-top: 10px solid #90d5ff;
-            box-shadow: 2px 2px 5px #90d5ff, -2px 2px 5px #90d5ff;
+            border-top: 10px solid #6f4e37;
+            box-shadow: 2px 2px 5px #6f4e37, -2px 2px 5px #6f4e37;
         }
         .riscos {
-            border-top: 10px solid #90d5ff;
-            box-shadow: 2px 2px 5px #90d5ff, -2px 2px 5px #90d5ff;
+            border-top: 10px solid #6f4e37;
+            box-shadow: 2px 2px 5px #6f4e37, -2px 2px 5px #6f4e37;
         }
         .dados {
-            border-top: 10px solid #90d5ff;
-            box-shadow: 2px 2px 5px #90d5ff, -2px 2px 5px #90d5ff;
+            border-top: 10px solid #6f4e37;
+            box-shadow: 2px 2px 5px #6f4e37, -2px 2px 5px #6f4e37;
         }
         .hedge {
-            border-top: 10px solid #90d5ff;
-            box-shadow: 2px 2px 5px #90d5ff, -2px 2px 5px #90d5ff;
+            border-top: 10px solid #6f4e37;
+            box-shadow: 2px 2px 5px #6f4e37, -2px 2px 5px #6f4e37;
         }
         .conformidade {
-            border-top: 10px solid #90d5ff;
-            box-shadow: 2px 2px 5px #90d5ff, -2px 2px 5px #90d5ff;
+            border-top: 10px solid #6f4e37;
+            box-shadow: 2px 2px 5px #6f4e37, -2px 2px 5px #6f4e37;
         }
         .explore{
             display: inline-block;
@@ -165,7 +165,7 @@
 
         /* Dark mode colors */
         body.dark-mode {
-            background: linear-gradient(to bottom, #080808, #393939, #838383);
+            background: linear-gradient(to bottom, #080808, #393939);
             color: #f5f5dc;
             height: 100vh;
             background-attachment: fixed;
