--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
         /* Dark mode colors */
         body.dark-mode {
-            background: linear-gradient(to bottom, #080808, #393939);
+            background: radial-gradient(circle, #080808 85%, #838383 15%);
             color: #f5f5dc;
             height: 100vh;
             background-attachment: fixed;
