--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <style>
         body{
-            background: radial-gradient(circle, #f0ead6 85%, #484640 15%);
+            background: radial-gradient(circle, #f3e9dc 45%, #f3e9dc 55%, #2f1811 100%);
             margin: 0;
             height: 100vh;
             background-repeat: no-repeat;
@@ -92,8 +92,8 @@
             margin: 20px auto;
             width: 600px;
             border-radius: 10px;
-            box-shadow: 5px 5px 7px #6f4e37, -5px 5px 12px #6f4e37;
-            text-shadow: 2px 2px 2px #a4a4a4;
+            box-shadow: 5px 5px 7px #5e3023, -5px 5px 12px #5e3023;
+            text-shadow: 2px 2px 2px #f3e9dc;
         }
         .module-container{
             width: 1100px;
@@ -103,7 +103,7 @@
             display: flex;
             justify-content: center;
             background-color: rgba(255, 255, 255, 0.8);
-            box-shadow: 5px 5px 7px #6f4e37, -5px 5px 12px #6f4e37;
+            box-shadow: 5px 5px 7px #5e3023, -5px 5px 12px #5e3023;
             padding: 30px;
             gap: 30px;
             border-radius: 40px;
@@ -116,6 +116,7 @@
             text-align: center;
             border-radius: 40px;
             box-shadow: 2px 2px 5px #6f4e37;
+            color: #3a3734;
         }
         .module-button:hover{
             transform: translateY(-10px);
@@ -153,19 +154,20 @@
             height: 30px;
             margin: auto;
             border-radius: 40px;
-            border: 1px solid rgb(28, 156, 148);
+            border: 1px solid #895737;
             vertical-align: center;
-            background: #57a8e6;
+            background: #c08552;
         }
         .explore:hover{
-            background: #1c9c94;
+            background: #895737;
+            border: 1px solid #5e3023;
             transform: scale(1.1);
             transition: transform 0.5s ease;
         }
 
         /* Dark mode colors */
         body.dark-mode {
-            background: radial-gradient(circle, #080808 85%, #838383 15%);
+            background: radial-gradient(circle, #080808 65%, #080808 75%, #838383 100%);
             color: #f5f5dc;
             height: 100vh;
             background-attachment: fixed;
