--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             width: 600px;
             border-radius: 10px;
             box-shadow: 5px 5px 7px #5e3023, -5px 5px 12px #5e3023;
-            text-shadow: 2px 2px 2px #f3e9dc;
+            text-shadow: 2px 2px 2px #895737;
         }
         .module-container{
             width: 1100px;
