--- a/ModuleDisplayPopUp.html
+++ b/ModuleDisplayPopUp.html
@@ -14,6 +14,7 @@
 
     <link rel="icon" href=""> <!-- Company logo -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <style>
         body{
@@ -165,6 +166,30 @@
             transition: transform 0.5s ease;
         }
 
+        .modal-dialog {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            width: auto;
+        }
+        .modal-content {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: auto;
+            height: auto;
+            border-radius: 50px;
+            margin: auto;
+        }
+        .modal-body {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+            justify-content: center;
+            align-items: center;
+        }
+
         /* Dark mode colors */
         body.dark-mode {
             background: radial-gradient(circle, #080808 65%, #080808 75%, #838383 100%);
@@ -258,13 +283,13 @@
 
 <div class="module-container">
     <!-- Module 1 -->
-    <div class="module-button caixa" data-bs-toggle="modal" data-bs-target="#subModuleModal">
+    <div class="module-button caixa" data-bs-toggle="modal" data-bs-target="#caixaModal">
         <h2>Caixa Central</h2>
         <p>Portuguese is so much work</p><p>Now Suppose this has 2 sub modules</p>
         <span class="explore">Explore sub-modules</span>
     </div>
     <!-- Module 2 -->
-    <div class="module-button transacoes" data-bs-toggle="modal" data-bs-target="#subModuleModal">
+    <div class="module-button transacoes" data-bs-toggle="modal" data-bs-target="#module2Modal">
         <h2>Module 2</h2>
         <p>Portuguese is so much work</p><p>Now Suppose this has 10 sub modules</p>
         <span class="explore">Explore sub-modules</span>
@@ -293,6 +318,95 @@
         <p>Portuguese is so much work</p><p>Geez boss</p>
         <span class="explore">Explore sub-modules</span>
     </div>
+
+    <!-- Caixa Central Modal -->
+    <div class="modal fade" id="caixaModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Caixa Central Submodules</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="module-button caixa" data-bs-toggle="modal" data-bs-target="#subModuleModal">
+                        <h2>Sub Module 1</h2>
+                        <p>Is this alright boo?</p><p>Did you have something else in mind?</p>
+                        <span class="explore" onclick="window.location.href='062c921f-fed7-4da7-87b7-e0736cad417e_Export-90b6bcb0-12ae-4ea7-908d-2192e732d8fc/JBNPV Lançar Valores MTM manualmente 1e2c69371e17809db481c8dcbcf1f085.html'">Open Module</span>
+                    </div>
+                    <div class="module-button transacoes" data-bs-toggle="modal" data-bs-target="#subModuleModal">
+                        <h2>Sub Module 2</h2>
+                        <p>Is this alright boo?</p><p>Did you have something else in mind?</p>
+                        <span class="explore" onclick="window.location.href='062c921f-fed7-4da7-87b7-e0736cad417e_Export-90b6bcb0-12ae-4ea7-908d-2192e732d8fc/OTC Moeda - SWAP de Moeda e Juros 006488ad202042b39383e3e0c9954389.html'">Open Module - Entrar?</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Module 2 Modal -->
+    <div class="modal fade" id="module2Modal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Module 2 Submodules</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="module-button caixa" data-bs-toggle="modal" data-bs-target="#subModuleModal">
+                        <h2>Sub Module 1</h2>
+                        <p>Is this alright boo?</p><p>Did you have something else in mind?</p>
+                        <span class="explore" onclick="window.location.href='062c921f-fed7-4da7-87b7-e0736cad417e_Export-90b6bcb0-12ae-4ea7-908d-2192e732d8fc/JBNPV Lançar Valores MTM manualmente 1e2c69371e17809db481c8dcbcf1f085.html'">Open Module</span>
+                    </div>
+                    <div class="module-button transacoes" data-bs-toggle="modal" data-bs-target="#subModuleModal">
+                        <h2>Sub Module 2</h2>
+                        <p>Is this alright boo?</p><p>Did you have something else in mind?</p>
+                        <span class="explore" onclick="window.location.href='062c921f-fed7-4da7-87b7-e0736cad417e_Export-90b6bcb0-12ae-4ea7-908d-2192e732d8fc/OTC Moeda - SWAP de Moeda e Juros 006488ad202042b39383e3e0c9954389.html'">Open Module - Entrar?</span>
+                    </div>
+                    <div class="module-button caixa" data-bs-toggle="modal" data-bs-target="#subModuleModal">
+                        <h2>Sub Module 3</h2>
+                        <p>Repitition</p>
+                        <span class="explore" onclick="window.location.href='062c921f-fed7-4da7-87b7-e0736cad417e_Export-90b6bcb0-12ae-4ea7-908d-2192e732d8fc/JBNPV Lançar Valores MTM manualmente 1e2c69371e17809db481c8dcbcf1f085.html'">Open Module</span>
+                    </div>
+                    <div class="module-button transacoes" data-bs-toggle="modal" data-bs-target="#subModuleModal">
+                        <h2>Sub Module 4</h2>
+                        <p>Repitition</p>
+                        <span class="explore" onclick="window.location.href='062c921f-fed7-4da7-87b7-e0736cad417e_Export-90b6bcb0-12ae-4ea7-908d-2192e732d8fc/OTC Moeda - SWAP de Moeda e Juros 006488ad202042b39383e3e0c9954389.html'">Open Module - Entrar?</span>
+                    </div>
+                    <div class="module-button caixa" data-bs-toggle="modal" data-bs-target="#subModuleModal">
+                        <h2>Sub Module 5</h2>
+                        <p>Repitition</p>
+                        <span class="explore" onclick="window.location.href='062c921f-fed7-4da7-87b7-e0736cad417e_Export-90b6bcb0-12ae-4ea7-908d-2192e732d8fc/JBNPV Lançar Valores MTM manualmente 1e2c69371e17809db481c8dcbcf1f085.html'">Open Module</span>
+                    </div>
+                    <div class="module-button transacoes" data-bs-toggle="modal" data-bs-target="#subModuleModal">
+                        <h2>Sub Module 6</h2>
+                        <p>Repitition</p>
+                        <span class="explore" onclick="window.location.href='062c921f-fed7-4da7-87b7-e0736cad417e_Export-90b6bcb0-12ae-4ea7-908d-2192e732d8fc/OTC Moeda - SWAP de Moeda e Juros 006488ad202042b39383e3e0c9954389.html'">Open Module - Entrar?</span>
+                    </div>
+                    <div class="module-button caixa" data-bs-toggle="modal" data-bs-target="#subModuleModal">
+                        <h2>Sub Module 7</h2>
+                        <p>Repitition</p>
+                        <span class="explore" onclick="window.location.href='062c921f-fed7-4da7-87b7-e0736cad417e_Export-90b6bcb0-12ae-4ea7-908d-2192e732d8fc/JBNPV Lançar Valores MTM manualmente 1e2c69371e17809db481c8dcbcf1f085.html'">Open Module</span>
+                    </div>
+                    <div class="module-button transacoes" data-bs-toggle="modal" data-bs-target="#subModuleModal">
+                        <h2>Sub Module 8</h2>
+                        <p>Repitition</p>
+                        <span class="explore" onclick="window.location.href='062c921f-fed7-4da7-87b7-e0736cad417e_Export-90b6bcb0-12ae-4ea7-908d-2192e732d8fc/OTC Moeda - SWAP de Moeda e Juros 006488ad202042b39383e3e0c9954389.html'">Open Module - Entrar?</span>
+                    </div>
+                    <div class="module-button caixa" data-bs-toggle="modal" data-bs-target="#subModuleModal">
+                        <h2>Sub Module 9</h2>
+                        <p>Repitition</p>
+                        <span class="explore" onclick="window.location.href='062c921f-fed7-4da7-87b7-e0736cad417e_Export-90b6bcb0-12ae-4ea7-908d-2192e732d8fc/JBNPV Lançar Valores MTM manualmente 1e2c69371e17809db481c8dcbcf1f085.html'">Open Module</span>
+                    </div>
+                    <div class="module-button transacoes" data-bs-toggle="modal" data-bs-target="#subModuleModal">
+                        <h2>Sub Module 10</h2>
+                        <p>Repitition</p>
+                        <span class="explore" onclick="window.location.href='062c921f-fed7-4da7-87b7-e0736cad417e_Export-90b6bcb0-12ae-4ea7-908d-2192e732d8fc/OTC Moeda - SWAP de Moeda e Juros 006488ad202042b39383e3e0c9954389.html'">Open Module - Entrar?</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 <script>
