--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="SAP, TRM, Modules"> <!-- SEO optimisation keywords (DISCUSS) -->
     <meta name="author" content="GDAConsultoria"> <!-- Company name should be fine right? -->
 
-    <title>SAP & TRM Hub</title>
+    <title>TRM Hub</title>
 
     <link rel="icon" href=""> <!-- Company logo -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
