trm name change

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 </label>
 
 
-<h1 class="head"> SAP & TRM Hub </h1>
+<h1 class="head"> TRM Hub </h1>
 
 <div class="module-container">
     <!-- Module 1 -->
