--- a/index.html
+++ b/index.html
@@ -259,37 +259,37 @@
 <div class="module-container">
     <!-- Module 1 -->
     <div class="module-button caixa" data-bs-toggle="modal" data-bs-target="#subModuleModal">
-        <h2>Caixa Central</h2>
+        <h2>Mercado Monetário</h2>
         <p>Portuguese is so much work</p><p>Geez boss</p>
         <span class="explore">Explore sub-modules</span>
     </div>
     <!-- Module 2 -->
     <div class="module-button transacoes" data-bs-toggle="modal" data-bs-target="#subModuleModal">
-        <h2>Module 2</h2>
+        <h2>Derivativos Listados</h2>
         <p>Portuguese is so much work</p><p>Geez boss</p>
         <span class="explore">Explore sub-modules</span>
     </div>
     <!-- Module 3 -->
     <div class="module-button riscos" data-bs-toggle="modal" data-bs-target="#subModuleModal">
-        <h2>Riscos</h2>
+        <h2>Títulos</h2>
         <p>Portuguese is so much work</p><p>Geez boss</p>
         <span class="explore">Explore sub-modules</span>
     </div>
     <!-- Module 4 -->
     <div class="module-button dados" data-bs-toggle="modal" data-bs-target="#subModuleModal">
-        <h2>Dados</h2>
+        <h2>Divisas</h2>
         <p>Portuguese is so much work</p><p>Geez boss</p>
         <span class="explore">Explore sub-modules</span>
     </div>
     <!-- Module 5 -->
     <div class="module-button hedge" data-bs-toggle="modal" data-bs-target="#subModuleModal">
-        <h2>Something Hedge</h2>
+        <h2>Derivativos OTC</h2>
         <p>Portuguese is so much work</p><p>Geez boss</p>
         <span class="explore">Explore sub-modules</span>
     </div>
     <!-- Module 6 -->
     <div class="module-button conformidade" data-bs-toggle="modal" data-bs-target="#subModuleModal">
-        <h2>Conformidade</h2>
+        <h2>Garantias</h2>
         <p>Portuguese is so much work</p><p>Geez boss</p>
         <span class="explore">Explore sub-modules</span>
     </div>
