Changes to index, linked TRM Hub with it

--- a/main_page_pre_module.html
+++ b/main_page_pre_module.html
@@ -58,9 +58,9 @@
 </head>
 <body>
 
-<h1 class="head">SAP & TRM Hub</h1>
+<h1 class="head">TRM Hub</h1>
 
-<a href="ModuleDisplayPage.html" class="button">Start Now</a>
+<a href="TRM_Hub.html" class="button">Start Now</a>
 
 </body>
 </html>
