--- a/index.html
+++ b/index.html
@@ -3,86 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- IMPORTANT: Add different ways to make it auto adapt to different screens -->
-
-    <meta name="description" content="SAP Modules"> <!-- What the page is for (DISCUSS) -->
-    <meta name="keywords" content="SAP, TRM, Modules"> <!-- SEO optimisation keywords (DISCUSS) -->
-    <meta name="author" content="GDAConsultoria"> <!-- Company name should be fine right? -->
-
-    <title>TRM Hub</title>
-
-    <link rel="icon" href=""> <!-- Company logo -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>SAP & TRM Hub</title>
     <style>
         body{
-            background: radial-gradient(circle, #f3e9dc 45%, #f3e9dc 50%, #2f1811 100%);
-            margin: 0;
+            background: radial-gradient(circle, #f0ead6 25%, #90d5ff 50%, #002244 100%);
+            margin: 0px;
             height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             background-repeat: no-repeat;
             background-attachment: fixed;
         }
-        .dark_light_mode_label {
-            display: flex;
-            align-items: center;
-            gap: 5px;
-            padding: 10px;
-            border-radius: 30px;
-            cursor: pointer;
-            position: relative;
-            width: fit-content;
-        }
-
-        .dark_light_mode_input{
-            display: none;
-        }
-        .dark_light_mode_selector {
-            width: 40px;
-            height: 19px;
-            border-radius: 24px;
-            position: relative;
-            flex-shrink: 0;
-            transition: background-color 0.3s;
-            border: 1px solid #00000066;
-        }
-
-        .dark_light_mode_selector::before {
-            content: "";
-            position: absolute;
-            top: 1px;
-            left: 2px;
-            width: 15px;
-            height: 15px;
-            background-color: white;
-            border-radius: 50%;
-            transition: transform 0.3s;
-        }
-
-        /* Knob moves 26px to the right when checked */
-        .dark_light_mode_input:checked ~ .dark_light_mode_selector::before {
-            transform: translateX(20px);
-        }
-
-        /* Background color changes on toggle */
-        .dark_light_mode_input:checked ~ .dark_light_mode_selector {
-            background-color: #444;
-        }
-
-        /* Icons size and spacing */
-        .light_mode img,
-        .dark_mode img {
-            width: 22px;
-            height: 22px;
-            flex-shrink: 0; /* prevent shrinking */
-        }
-
-        .dark_light_mode_input:checked ~ .light_mode img,
-        .dark_light_mode_input:checked ~ .dark_mode img {
-            filter: invert(1);
-        }
-
-        .head{
+        .head {
             text-align: center;
             font: bolder 64px "Times New Roman";
             background-color: #f0ead6;
@@ -90,217 +25,42 @@
             color: #3a3734;
             padding: 10px;
             margin: 20px auto;
+            height: auto;
             width: 600px;
             border-radius: 10px;
-            box-shadow: 5px 5px 7px #5e3023, -5px 5px 12px #5e3023;
-            text-shadow: 2px 2px 2px #895737;
+            box-shadow: 5px 5px 7px #002244, -5px 5px 12px #002244;
+            text-shadow: 2px 2px 2px #002244;
         }
-        .module-container{
-            width: 1100px;
-            height: auto;
-            margin: auto;
-            flex-wrap: wrap;
+        .button{
             display: flex;
             justify-content: center;
-            background-color: rgba(255, 255, 255, 0.8);
-            box-shadow: 5px 5px 7px #5e3023, -5px 5px 12px #5e3023;
-            padding: 30px;
-            gap: 30px;
-            border-radius: 40px;
-        }
-        .module-button{
-            width: 300px;
-            height: auto;
-            margin: auto;
-            padding: 10px;
-            text-align: center;
-            border-radius: 40px;
-            box-shadow: 2px 2px 5px #6f4e37;
-            color: #3a3734;
-        }
-        .module-button:hover{
-            transform: translateY(-10px);
-            transition: transform 0.5s ease;
-            background: inherit;
-        }
-        .caixa, body.dark-mode .caixa{
-            border-top: 10px solid #6f4e37;
-            box-shadow: 2px 2px 5px #6f4e37, -2px 2px 5px #6f4e37;
-        }
-        .transacoes{
-            border-top: 10px solid #6f4e37;
-            box-shadow: 2px 2px 5px #6f4e37, -2px 2px 5px #6f4e37;
-        }
-        .riscos {
-            border-top: 10px solid #6f4e37;
-            box-shadow: 2px 2px 5px #6f4e37, -2px 2px 5px #6f4e37;
-        }
-        .dados {
-            border-top: 10px solid #6f4e37;
-            box-shadow: 2px 2px 5px #6f4e37, -2px 2px 5px #6f4e37;
-        }
-        .hedge {
-            border-top: 10px solid #6f4e37;
-            box-shadow: 2px 2px 5px #6f4e37, -2px 2px 5px #6f4e37;
-        }
-        .conformidade {
-            border-top: 10px solid #6f4e37;
-            box-shadow: 2px 2px 5px #6f4e37, -2px 2px 5px #6f4e37;
-        }
-        .explore{
-            display: inline-block;
+            align-items: center;
+            text-decoration: none;
             cursor: pointer;
             width: 180px;
             height: 30px;
-            margin: auto;
             border-radius: 40px;
-            border: 1px solid #895737;
+            border: 1px solid #002244;
+            margin-bottom: 20px;
             vertical-align: center;
-            background: #c08552;
+            background: #85c5ed;
+            color: #002244;
         }
-        .explore:hover{
-            background: #895737;
-            border: 1px solid #5e3023;
+        .button:hover{
+            background: #002244;
+            border: 1px solid #85c5ed;
+            color: #85c5ed;
             transform: scale(1.1);
             transition: transform 0.5s ease;
         }
 
-        /* Dark mode colors */
-        body.dark-mode {
-            background: radial-gradient(circle, #080808 65%, #080808 75%, #838383 100%);
-            color: #f5f5dc;
-            height: 100vh;
-            background-attachment: fixed;
-        }
-
-        body.dark-mode .head {
-            background-color: #08080866;
-            color: #f5f5dc;
-            box-shadow: 5px 5px 10px #01796F, -5px 5px 10px #01796F;
-            text-shadow: 2px 2px 5px #605f5f;
-        }
-
-        body.dark-mode .module-container {
-            background-color: #4b4b4b;
-            box-shadow: 5px 5px 10px #01796F, -5px 5px 10px #01796F;
-        }
-
-        body.dark-mode .module-button {
-            background-color: #08080866;
-            color: #f5f5dc;
-            box-shadow: 2px 2px 7px #01796F;
-        }
-
-        body.dark-mode .module-button:hover {
-            background-color: #838282;
-        }
-
-        body.dark-mode .caixa{
-            border-top: 10px solid #90d5ff;
-            box-shadow: 2px 2px 7px #90d5ff, -2px 2px 7px #90d5ff;
-        }
-
-        body.dark-mode .transacoes{
-            border-top: 10px solid #90d5ff;
-            box-shadow: 2px 2px 7px #90d5ff, -2px 2px 7px #90d5ff;
-
-        }
-
-        body.dark-mode .riscos {
-            border-top: 10px solid #90d5ff;
-            box-shadow: 2px 2px 7px #90d5ff, -2px 2px 7px #90d5ff;
-        }
-
-        body.dark-mode .dados {
-            border-top: 10px solid #90d5ff;
-            box-shadow: 2px 2px 7px #90d5ff, -2px 2px 7px #90d5ff;
-        }
-
-        body.dark-mode .hedge {
-            border-top: 10px solid #90d5ff;
-            box-shadow: 2px 2px 7px #90d5ff, -2px 2px 7px #90d5ff;
-        }
-        body.dark-mode .conformidade {
-            border-top: 10px solid #90d5ff;
-            box-shadow: 2px 2px 7px #90d5ff, -2px 2px 7px #90d5ff;
-        }
-
-        body.dark-mode .explore {
-            background: #808080;
-            border: 1px solid #808080;
-            color: antiquewhite;
-        }
-
-        body.dark-mode .explore:hover {
-            background: #08080866;
-            border: 1px solid #08080866;
-            color: antiquewhite;
-        }
     </style>
 </head>
 <body>
-<label class="dark_light_mode_label">
-    <input type="checkbox" class="dark_light_mode_input" id="mode-toggle">
 
-    <span class="light_mode">
-        <img src="lightmode.png" alt="Light Mode">
-    </span>
+<h1 class="head">TRM Hub</h1>
 
-    <span class="dark_light_mode_selector"></span>
-
-    <span class="dark_mode">
-        <img src="darkmode.png" alt="Dark Mode">
-    </span>
-</label>
-
-
-<h1 class="head"> TRM Hub </h1>
-
-<div class="module-container">
-    <!-- Module 1 -->
-    <div class="module-button caixa" data-bs-toggle="modal" data-bs-target="#subModuleModal">
-        <h2>Mercado Monetário</h2>
-        <p>Portuguese is so much work</p><p>Geez boss</p>
-        <span class="explore">Explore sub-modules</span>
-    </div>
-    <!-- Module 2 -->
-    <div class="module-button transacoes" data-bs-toggle="modal" data-bs-target="#subModuleModal">
-        <h2>Derivativos Listados</h2>
-        <p>Portuguese is so much work</p><p>Geez boss</p>
-        <span class="explore">Explore sub-modules</span>
-    </div>
-    <!-- Module 3 -->
-    <div class="module-button riscos" data-bs-toggle="modal" data-bs-target="#subModuleModal">
-        <h2>Títulos</h2>
-        <p>Portuguese is so much work</p><p>Geez boss</p>
-        <span class="explore">Explore sub-modules</span>
-    </div>
-    <!-- Module 4 -->
-    <div class="module-button dados" data-bs-toggle="modal" data-bs-target="#subModuleModal">
-        <h2>Divisas</h2>
-        <p>Portuguese is so much work</p><p>Geez boss</p>
-        <span class="explore">Explore sub-modules</span>
-    </div>
-    <!-- Module 5 -->
-    <div class="module-button hedge" data-bs-toggle="modal" data-bs-target="#subModuleModal">
-        <h2>Derivativos OTC</h2>
-        <p>Portuguese is so much work</p><p>Geez boss</p>
-        <span class="explore">Explore sub-modules</span>
-    </div>
-    <!-- Module 6 -->
-    <div class="module-button conformidade" data-bs-toggle="modal" data-bs-target="#subModuleModal">
-        <h2>Garantias</h2>
-        <p>Portuguese is so much work</p><p>Geez boss</p>
-        <span class="explore">Explore sub-modules</span>
-    </div>
-</div>
-
-<script>
-    const toggle = document.getElementById('mode-toggle');
-    toggle.addEventListener('change', () => {
-        document.body.classList.toggle('dark-mode', toggle.checked);
-    });
-</script>
+<a href="TRM_Hub.html" class="button">Start Now</a>
 
 </body>
 </html>
