--- a/index.html
+++ b/index.html
@@ -53,6 +53,29 @@
             transform: scale(1.1);
             transition: transform 0.5s ease;
         }
+        .footer {
+            position: absolute;
+            bottom: 0px;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 5px;
+            font-family: "Times New Roman", serif;
+            font-size: 18px;
+            color: #f0ead6;
+            background-color: rgba(0, 34, 68, 0.2);
+            padding: 8px 0;
+        }
+
+        .footer-icon {
+            width: 30px;
+            height: 30px;
+        }
+
+        .footer-text {
+            font-weight: bold;
+        }
 
     </style>
 </head>
@@ -61,6 +84,12 @@
 <h1 class="head">TRM Hub</h1>
 
 <a href="TRM_Hub.html" class="button">Start Now</a>
+
+<footer class="footer">
+    <img src="LogoGabe.png" alt="GDA Logo" class="footer-icon">
+    <span class="footer-text">GDA Consultoria 2025</span>
+</footer>
+
 
 </body>
 </html>
