--- a/TRM_Hub.html
+++ b/TRM_Hub.html
@@ -170,74 +170,59 @@
 
         /* Dark mode colors */
         body.dark-mode {
-            background: radial-gradient(circle, #080808 65%, #080808 75%, #838383 100%);
-            color: #f5f5dc;
+            background: radial-gradient(circle, #1a1a1a 65%, #2c2c2c 75%, #4f4f4f 100%);
+            color: #e0e0d1;
             height: 100vh;
             background-attachment: fixed;
         }
 
         body.dark-mode .head {
-            background-color: #08080866;
+            background-color: #2c2c2c;
             color: #f5f5dc;
-            box-shadow: 5px 5px 10px #01796F, -5px 5px 10px #01796F;
-            text-shadow: 2px 2px 5px #605f5f;
+            box-shadow: 5px 5px 10px #3a3a3a, -5px 5px 10px #3a3a3a;
+            text-shadow: 2px 2px 5px #5a5a5a;
         }
 
         body.dark-mode .module-container {
-            background-color: #4b4b4b;
-            box-shadow: 5px 5px 10px #01796F, -5px 5px 10px #01796F;
+            background-color: #3a3a3a;
+            box-shadow: 5px 5px 10px #5a5a5a, -5px 5px 10px #5a5a5a;
         }
 
         body.dark-mode .module-button {
-            background-color: #08080866;
+            background-color: #2c2c2c;
             color: #f5f5dc;
-            box-shadow: 2px 2px 7px #01796F;
+            box-shadow: 2px 2px 7px #5a5a5a;
         }
 
         body.dark-mode .module-button:hover {
-            background-color: #838282;
+            background-color: #4f4f4f;
         }
 
-        body.dark-mode .caixa{
-            border-top: 10px solid #90d5ff;
-            box-shadow: 2px 2px 7px #90d5ff, -2px 2px 7px #90d5ff;
-        }
-
-        body.dark-mode .transacoes{
-            border-top: 10px solid #90d5ff;
-            box-shadow: 2px 2px 7px #90d5ff, -2px 2px 7px #90d5ff;
-
-        }
-
-        body.dark-mode .riscos {
-            border-top: 10px solid #90d5ff;
-            box-shadow: 2px 2px 7px #90d5ff, -2px 2px 7px #90d5ff;
-        }
-
-        body.dark-mode .dados {
-            border-top: 10px solid #90d5ff;
-            box-shadow: 2px 2px 7px #90d5ff, -2px 2px 7px #90d5ff;
-        }
-
-        body.dark-mode .hedge {
-            border-top: 10px solid #90d5ff;
-            box-shadow: 2px 2px 7px #90d5ff, -2px 2px 7px #90d5ff;
-        }
+        body.dark-mode .caixa,
+        body.dark-mode .transacoes,
+        body.dark-mode .riscos,
+        body.dark-mode .dados,
+        body.dark-mode .hedge,
         body.dark-mode .conformidade {
-            border-top: 10px solid #90d5ff;
-            box-shadow: 2px 2px 7px #90d5ff, -2px 2px 7px #90d5ff;
+            border-top: 8px solid #a0c4ff;
+            box-shadow: 2px 2px 7px #a0c4ff, -2px 2px 7px #a0c4ff;
         }
 
         body.dark-mode .explore {
-            background: #808080;
-            border: 1px solid #808080;
-            color: antiquewhite;
+            background: #4f4f4f;
+            border: 1px solid #2c2c2c;
+            color: #f5f5dc;
         }
 
         body.dark-mode .explore:hover {
-            background: #08080866;
-            border: 1px solid #08080866;
-            color: antiquewhite;
+            background: #2c2c2c;
+            border: 1px solid #2c2c2c;
+            color: #f5f5dc;
+        }
+
+        body.dark-mode .footer {
+            background-color: rgba(47, 47, 47, 0.6);
+            padding: 8px 0;
         }
 
         .footer {
