Placeholder images for home, prev, next, notes

--- a/SubModuleSample.html
+++ b/SubModuleSample.html
@@ -190,11 +190,20 @@
 
     <!-- Navigation Buttons -->
     <div class="top-buttons mb-4">
-      <button class="btn btn-nav" onclick="location.href='TRM_Hub.html'">🏠 Home</button>
+      <button class="btn btn-nav" onclick="location.href='../TRM_Hub.html'">
+        <img src="images/home.png" alt="Home" style="height:24px;vertical-align:middle;">
+        Home
+      </button>
       <div>
-        <button class="btn btn-nav me-2" onclick="location.href='prev.html'">⬅️ Previous</button>
-        <button class="btn btn-nav" onclick="location.href='next.html'">Next ➡️</button>
-      </div>
+        <button class="btn btn-nav me-2" onclick="location.href='../prev.html'">
+          <img src="images/previous.png" alt="Previous" style="height:24px;vertical-align:middle;">
+          Previous
+        </button>
+        <button class="btn btn-nav" onclick="location.href='../next.html'">
+          Next
+          <img src="images/next.png" alt="Next" style="height:24px;vertical-align:middle;">
+        </button>
+        </div>
     </div>
 
     <div class="alert alert-info shadow-sm mb-4">
@@ -272,7 +281,10 @@
 
     <!-- Notes -->
     <div class="notes-container mt-5">
-      <h5>📝 Your Notes</h5>
+      <h5>
+        <img src="images/notes.png" alt="Notes" style="height:24px;vertical-align:middle; margin-right:6px;">
+        Your Notes
+      </h5>
       <textarea id="userNotes" placeholder="Write notes for this submodule..."></textarea>
     </div>
   </div>
