--- a/generated_submodules/OTC Moeda - SWAP de Moeda e Juros.html
+++ b/generated_submodules/OTC Moeda - SWAP de Moeda e Juros.html
@@ -180,10 +180,19 @@
 </div>
 <!-- Navigation Buttons -->
 <div class="top-buttons mb-4">
-<button class="btn btn-nav" onclick="location.href='TRM_Hub.html'">🏠 Home</button>
+<button class="btn btn-nav" onclick="location.href='../TRM_Hub.html'">
+<img alt="Home" src="images/home.png" style="height:24px;vertical-align:middle;"/>
+        Home
+      </button>
 <div>
-<button class="btn btn-nav me-2" onclick="location.href='prev.html'">⬅️ Previous</button>
-<button class="btn btn-nav" onclick="location.href='next.html'">Next ➡️</button>
+<button class="btn btn-nav me-2" onclick="location.href='../prev.html'">
+<img alt="Previous" src="images/previous.png" style="height:24px;vertical-align:middle;"/>
+          Previous
+        </button>
+<button class="btn btn-nav" onclick="location.href='../next.html'">
+          Next
+          <img alt="Next" src="images/next.png" style="height:24px;vertical-align:middle;"/>
+</button>
 </div>
 </div>
 <div class="alert alert-info shadow-sm mb-4">
@@ -192,7 +201,10 @@
 <div class="accordion" id="accordionSteps"></div>
 <!-- Notes -->
 <div class="notes-container mt-5">
-<h5>📝 Your Notes</h5>
+<h5>
+<img alt="Notes" src="images/notes.png" style="height:24px;vertical-align:middle; margin-right:6px;"/>
+        Your Notes
+      </h5>
 <textarea id="userNotes" placeholder="Write notes for this submodule..."></textarea>
 </div>
 </div>
