--- a/generated_submodules/JBNPV _ Lançar Valores MTM manualmente.html
+++ b/generated_submodules/JBNPV _ Lançar Valores MTM manualmente.html
@@ -180,10 +180,19 @@
 </div>
 <!-- Navigation Buttons -->
 <div class="top-buttons mb-4">
-<button class="btn btn-nav" onclick="location.href='TRM_Hub.html'">🏠 Home</button>
+<button class="btn btn-nav" onclick="location.href='../TRM_Hub.html'">
+<img alt="Home" src="images/home.png" style="height:24px;vertical-align:middle;"/>
+        Home
+      </button>
 <div>
-<button class="btn btn-nav me-2" onclick="location.href='prev.html'">⬅️ Previous</button>
-<button class="btn btn-nav" onclick="location.href='next.html'">Next ➡️</button>
+<button class="btn btn-nav me-2" onclick="location.href='../prev.html'">
+<img alt="Previous" src="images/previous.png" style="height:24px;vertical-align:middle;"/>
+          Previous
+        </button>
+<button class="btn btn-nav" onclick="location.href='../next.html'">
+          Next
+          <img alt="Next" src="images/next.png" style="height:24px;vertical-align:middle;"/>
+</button>
 </div>
 </div>
 <div class="alert alert-info shadow-sm mb-4">
@@ -192,7 +201,10 @@
 <div class="accordion" id="accordionSteps"><div class="accordion-item"><h2 class="accordion-header" id="heading1"><button class="accordion-button collapsed" data-bs-target="#collapse1" data-bs-toggle="collapse" type="button">Step 1: 1.Acessar o App SAP Fiori</button></h2><div class="accordion-collapse collapse" id="collapse1"><div class="accordion-body"><ul><li>Procedimento:</li><li>Abra  o app Inserir valores atuais líquidos(JBNPV).</li></ul><img alt="Screenshot" class="img-fluid rounded mb-3" src="images\image 52.png"/><div></div></div></div></div><div class="accordion-item"><h2 class="accordion-header" id="heading2"><button class="accordion-button collapsed" data-bs-target="#collapse2" data-bs-toggle="collapse" type="button">Step 2: 2. Entrada de dados do lançamento</button></h2><div class="accordion-collapse collapse" id="collapse2"><div class="accordion-body"><ul><li>Procedimento:</li><li>Marcar o campo Empresa;</li><li>Marcar o campo Transação;</li><li>Clicar em✅</li><li>Procedimento:</li><li>Empresa:Exemplo:1000</li><li>Transação:Exemplo:4000000000042</li><li>Clicar em✅</li></ul><img alt="Screenshot" class="img-fluid rounded mb-3" src="images\image 53.png"/><div></div></div></div></div><div class="accordion-item"><h2 class="accordion-header" id="heading3"><button class="accordion-button collapsed" data-bs-target="#collapse3" data-bs-toggle="collapse" type="button">Step 3: 3. Inserir as informações de lançamento</button></h2><div class="accordion-collapse collapse" id="collapse3"><div class="accordion-body"><ul><li>Procedimento:</li><li>Tipo de contrato: Exemplo:Derivativos</li><li>Empresa: Exemplo:1000</li><li>Transação: Exemplo:4000000000042</li><li>Tipo de Avaliação: Exemplo:001(Avaliação atual)</li><li>A partir de: Exemplo:30.11.2024</li><li>Valor atual líquido: Exemplo:100.000,00</li><li>Moeda do Valor atual: Exemplo:BRL</li><li>Clicar emGRAVAR.</li></ul><img alt="Screenshot" class="img-fluid rounded mb-3" src="images\image 55.png"/><div></div></div></div></div></div>
 <!-- Notes -->
 <div class="notes-container mt-5">
-<h5>📝 Your Notes</h5>
+<h5>
+<img alt="Notes" src="images/notes.png" style="height:24px;vertical-align:middle; margin-right:6px;"/>
+        Your Notes
+      </h5>
 <textarea id="userNotes" placeholder="Write notes for this submodule..."></textarea>
 </div>
 </div>
