--- a/generated_submodules/TJ05 _ Corrigir a taxa de juros.html
+++ b/generated_submodules/TJ05 _ Corrigir a taxa de juros.html
@@ -180,10 +180,19 @@
 </div>
 <!-- Navigation Buttons -->
 <div class="top-buttons mb-4">
-<button class="btn btn-nav" onclick="location.href='TRM_Hub.html'">🏠 Home</button>
+<button class="btn btn-nav" onclick="location.href='../TRM_Hub.html'">
+<img alt="Home" src="images/home.png" style="height:24px;vertical-align:middle;"/>
+        Home
+      </button>
 <div>
-<button class="btn btn-nav me-2" onclick="location.href='prev.html'">⬅️ Previous</button>
-<button class="btn btn-nav" onclick="location.href='next.html'">Next ➡️</button>
+<button class="btn btn-nav me-2" onclick="location.href='../prev.html'">
+<img alt="Previous" src="images/previous.png" style="height:24px;vertical-align:middle;"/>
+          Previous
+        </button>
+<button class="btn btn-nav" onclick="location.href='../next.html'">
+          Next
+          <img alt="Next" src="images/next.png" style="height:24px;vertical-align:middle;"/>
+</button>
 </div>
 </div>
 <div class="alert alert-info shadow-sm mb-4">
@@ -192,7 +201,10 @@
 <div class="accordion" id="accordionSteps"><div class="accordion-item"><h2 class="accordion-header" id="heading1"><button class="accordion-button collapsed" data-bs-target="#collapse1" data-bs-toggle="collapse" type="button">Step 1: 1. Acessar o App SAP Fiori</button></h2><div class="accordion-collapse collapse" id="collapse1"><div class="accordion-body"><ul><li>Procedimento:</li><li>Abra o App Executar ajustes automáticos –Taxas/preços (TJ05).</li></ul><img alt="Screenshot" class="img-fluid rounded mb-3" src="images\image 47.png"/><div></div></div></div></div><div class="accordion-item"><h2 class="accordion-header" id="heading2"><button class="accordion-button collapsed" data-bs-target="#collapse2" data-bs-toggle="collapse" type="button">Step 2: 2. Inserir parâmetro de correção</button></h2><div class="accordion-collapse collapse" id="collapse2"><div class="accordion-body"><ul><li>Insira os seguintes dados e selecione Executar:</li><li>Correção de juros:Selecionar</li><li>Empresa:Exemplo:1000</li><li>Data de fixação:Exemplo:18.11.2024Data que será o movimento</li><li>Transações individuais:Exemplo:4000000000042</li><li>Primeiroexecutar como testepara conferência.</li><li>Clique emEXECUTAR.</li></ul><img alt="Screenshot" class="img-fluid rounded mb-3" src="images\image 48.png"/><div></div></div></div></div><div class="accordion-item"><h2 class="accordion-header" id="heading3"><button class="accordion-button collapsed" data-bs-target="#collapse3" data-bs-toggle="collapse" type="button">Step 3: 3. Verifique o log da execução</button></h2><div class="accordion-collapse collapse" id="collapse3"><div class="accordion-body"><ul><li>Verificar o log de execução</li><li>Clicar&lt;para retornar.</li></ul><img alt="Screenshot" class="img-fluid rounded mb-3" src="images\image 49.png"/><div></div></div></div></div><div class="accordion-item"><h2 class="accordion-header" id="heading4"><button class="accordion-button collapsed" data-bs-target="#collapse4" data-bs-toggle="collapse" type="button">Step 4: 4. Execução definitiva</button></h2><div class="accordion-collapse collapse" id="collapse4"><div class="accordion-body"><ul><li>Procedimento:</li><li>Desmarcar a execução de teste para realizar em efetivo</li><li>Clique emEXECUTAR.</li></ul><img alt="Screenshot" class="img-fluid rounded mb-3" src="images\image 50.png"/><div></div></div></div></div></div>
 <!-- Notes -->
 <div class="notes-container mt-5">
-<h5>📝 Your Notes</h5>
+<h5>
+<img alt="Notes" src="images/notes.png" style="height:24px;vertical-align:middle; margin-right:6px;"/>
+        Your Notes
+      </h5>
 <textarea id="userNotes" placeholder="Write notes for this submodule..."></textarea>
 </div>
 </div>
