--- a/generated_submodules/Transação TO04 _ Definir status de liquidação.html
+++ b/generated_submodules/Transação TO04 _ Definir status de liquidação.html
@@ -180,10 +180,19 @@
 </div>
 <!-- Navigation Buttons -->
 <div class="top-buttons mb-4">
-<button class="btn btn-nav" onclick="location.href='TRM_Hub.html'">🏠 Home</button>
+<button class="btn btn-nav" onclick="location.href='../TRM_Hub.html'">
+<img alt="Home" src="images/home.png" style="height:24px;vertical-align:middle;"/>
+        Home
+      </button>
 <div>
-<button class="btn btn-nav me-2" onclick="location.href='prev.html'">⬅️ Previous</button>
-<button class="btn btn-nav" onclick="location.href='next.html'">Next ➡️</button>
+<button class="btn btn-nav me-2" onclick="location.href='../prev.html'">
+<img alt="Previous" src="images/previous.png" style="height:24px;vertical-align:middle;"/>
+          Previous
+        </button>
+<button class="btn btn-nav" onclick="location.href='../next.html'">
+          Next
+          <img alt="Next" src="images/next.png" style="height:24px;vertical-align:middle;"/>
+</button>
 </div>
 </div>
 <div class="alert alert-info shadow-sm mb-4">
@@ -192,7 +201,10 @@
 <div class="accordion" id="accordionSteps"><div class="accordion-item"><h2 class="accordion-header" id="heading1"><button class="accordion-button collapsed" data-bs-target="#collapse1" data-bs-toggle="collapse" type="button">Step 1: 1. Inserir critérios de seleção e liquidar a transação TRM</button></h2><div class="accordion-collapse collapse" id="collapse1"><div class="accordion-body"><ul><li>Insira os seguintes dados:</li><li>Preencher o campo Empresa.Exemplo:1000</li><li>Preencher o Nº daTransação.Exemplo:4000000000042</li><li>Clique no botãoENTRAR.</li></ul><img alt="Screenshot" class="img-fluid rounded mb-3" src="images\image 72.png"/><div></div></div></div></div><div class="accordion-item"><h2 class="accordion-header" id="heading2"><button class="accordion-button collapsed" data-bs-target="#collapse2" data-bs-toggle="collapse" type="button">Step 2: 2. Salvar a modificação</button></h2><div class="accordion-collapse collapse" id="collapse2"><div class="accordion-body"><ul><li>Procedimento:</li><li>Verificar as informações do contrato e se a Operação está comoLiquidação contratual</li><li>Clicar emGRAVAR.</li><li>A transação é liquidada e gravada.</li></ul><img alt="Screenshot" class="img-fluid rounded mb-3" src="images\image 73.png"/><div></div></div></div></div><div class="accordion-item"><h2 class="accordion-header" id="heading3"><button class="accordion-button collapsed" data-bs-target="#collapse3" data-bs-toggle="collapse" type="button">Step 3: 1. Acessar o app SAP Fiori</button></h2><div class="accordion-collapse collapse" id="collapse3"><div class="accordion-body"><ul><li>Procedimento:</li><li>Abra  o App Processar transação financeira (FTR_EDIT).</li></ul><img alt="Screenshot" class="img-fluid rounded mb-3" src="images\e3184376-7f3a-4a1a-b6b9-3bf01f23e02f.png"/><div></div></div></div></div><div class="accordion-item"><h2 class="accordion-header" id="heading4"><button class="accordion-button collapsed" data-bs-target="#collapse4" data-bs-toggle="collapse" type="button">Step 4: 2. Inserir critérios de seleção e liquidar a transação TRM</button></h2><div class="accordion-collapse collapse" id="collapse4"><div class="accordion-body"><ul><li>Insira os seguintes dados:</li><li>Preencher o campo Empresa.Exemplo:1000</li><li>Preencher o Nº daTransação.Exemplo:4000000000042</li><li>Informar o Grp.instrums.financs.:11 Derivativos de taxa de juros MB</li><li>Clique no botãoLiquidar.</li></ul><img alt="Screenshot" class="img-fluid rounded mb-3" src="images\image 75.png"/><div></div></div></div></div><div class="accordion-item"><h2 class="accordion-header" id="heading5"><button class="accordion-button collapsed" data-bs-target="#collapse5" data-bs-toggle="collapse" type="button">Step 5: 4. Salvar a modificação</button></h2><div class="accordion-collapse collapse" id="collapse5"><div class="accordion-body"><ul><li>Procedimento:</li><li>Verificar as informações do contrato e se a Operação está comoLiquidação contratual</li><li>Clicar emGRAVAR.</li><li>A transação é liquidada e gravada.</li></ul><img alt="Screenshot" class="img-fluid rounded mb-3" src="images\image 73.png"/><div></div></div></div></div></div>
 <!-- Notes -->
 <div class="notes-container mt-5">
-<h5>📝 Your Notes</h5>
+<h5>
+<img alt="Notes" src="images/notes.png" style="height:24px;vertical-align:middle; margin-right:6px;"/>
+        Your Notes
+      </h5>
 <textarea id="userNotes" placeholder="Write notes for this submodule..."></textarea>
 </div>
 </div>
